--- a/index.html
+++ b/index.html
@@ -2,180 +2,135 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EXTAZZ CYBER PORTFOLIO</title>
+<title>EXTAZZ CYBER PANEL</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+    body {
+        margin: 0;
+        padding: 0;
+        background: #020902; /* Almost black */
+        font-family: "Consolas", monospace;
+        color: #00ff88;
+        display: flex;
+        justify-content: center;
+        padding-bottom: 100px;
 
-/* ===== ФОН ===== */
-body {
-    margin: 0;
-    font-family: 'Orbitron', sans-serif;
-    background: url('https://i.ibb.co/4Y3xtVN/grid.jpg') center/cover no-repeat fixed;
-    color: #00eaff;
-    text-align: center;
-    overflow-x: hidden;
-}
+        /* subtle hacker glow */
+        background-image:
+            radial-gradient(circle at 20% 30%, rgba(0,255,120,0.05) 0%, transparent 50%),
+            radial-gradient(circle at 80% 70%, rgba(0,255,120,0.04) 0%, transparent 50%),
+            radial-gradient(circle at 50% 50%, rgba(0,255,120,0.03) 0%, transparent 60%);
+        background-repeat: no-repeat;
+    }
 
-/* ===== ЭФФЕКТ ЗАГРУЗКИ ===== */
-#loader {
-    position: fixed;
-    inset: 0;
-    background: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #00eaff;
-    font-size: 28px;
-    letter-spacing: 3px;
-    text-shadow: 0 0 15px #00eaff;
-    animation: fadeOut 1.5s ease-in forwards;
-    animation-delay: 2s;
-    z-index: 9999;
-}
-@keyframes fadeOut {
-    to { opacity: 0; visibility: hidden; }
-}
+    .container {
+        width: 95%;
+        max-width: 900px;
+        margin-top: 40px;
+    }
 
-/* ===== МЕНЮ ===== */
-.menu {
-    margin-top: 20px;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    animation: fade 2s ease;
-}
-.menu a {
-    color: #00eaff;
-    text-decoration: none;
-    text-shadow: 0 0 10px #00eaff;
-    font-weight: bold;
-}
-@keyframes fade {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
+    h1 {
+        text-align: center;
+        color: #00ff88;
+        text-shadow: 0 0 10px #00ff88;
+        margin-bottom: 40px;
+        font-size: 32px;
+    }
 
-/* ===== ЗАГОЛОВКИ ===== */
-h1, h2 {
-    text-shadow: 0 0 15px #00eaff;
-    letter-spacing: 3px;
-    animation: fade 1.5s ease;
-}
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+        gap: 20px;
+    }
 
-/* ===== КАРТОЧКИ УСЛУГ ===== */
-.cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 20px;
-    width: 90%;
-    margin: 30px auto;
-}
+    .card {
+        background: rgba(0, 20, 10, 0.55);
+        border: 1px solid #003f22;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 8px rgba(0,255,120,0.08);
+        transition: 0.25s;
+    }
 
-.card {
-    padding: 20px;
-    border: 2px solid #00eaff;
-    border-radius: 12px;
-    background: rgba(0, 0, 0, 0.35);
-    box-shadow: 0 0 20px #00eaff;
-    font-size: 20px;
-    transition: 0.3s;
-    cursor: pointer;
+    .card:hover {
+        border-color: #00ff88;
+        box-shadow: 0 0 15px rgba(0,255,120,0.3);
+        transform: translateY(-4px);
+    }
 
-    /* АНИМАЦИЯ ВХОДА */
-    animation: slideUp 0.9s ease;
-}
-.card:hover {
-    transform: scale(1.07) rotate3d(1, 1, 0, 6deg);
-    box-shadow: 0 0 35px #00eaff, 0 0 75px #00eaff;
-}
+    .card h2 {
+        margin-top: 0;
+        font-size: 22px;
+        color: #00ff88;
+        text-shadow: 0 0 8px #00ff88;
+    }
 
-@keyframes slideUp {
-    from { transform: translateY(40px); opacity: 0; }
-    to { transform: translateY(0); opacity: 1; }
-}
+    .card p {
+        color: #aaffdd;
+        font-size: 15px;
+        line-height: 1.4;
+    }
 
-/* ===== НЕОНОВАЯ ПУЛЬСИРУЮЩАЯ КНОПКА ===== */
-.contact-btn {
-    display: inline-block;
-    margin: 60px auto;
-    padding: 18px 40px;
-    border: 3px solid #00eaff;
-    border-radius: 12px;
-    font-size: 26px;
-    background: rgba(0, 0, 0, 0.4);
-    color: #00eaff;
-    text-decoration: none;
-    cursor: pointer;
+    .tg-btn {
+        display: block;
+        width: 100%;
+        margin-top: 25px;
+        text-align: center;
+        padding: 15px;
+        background: rgba(0, 120, 60, 0.3);
+        border: 1px solid #00ff88;
+        border-radius: 10px;
+        text-decoration: none;
+        color: #00ff88;
+        font-size: 18px;
+        transition: 0.25s;
+        text-shadow: 0 0 6px #00ff88;
+    }
 
-    /* ГЛОУ */
-    box-shadow: 0 0 25px #00eaff, 0 0 60px #00eaff;
-
-    /* ПУЛЬС + 3D */
-    animation: pulse 2.2s infinite ease-in-out;
-    transition: 0.25s;
-}
-.contact-btn:hover {
-    transform: scale(1.12) translateY(-4px);
-    box-shadow: 0 0 40px #00eaff, 0 0 100px #00eaff;
-}
-
-/* ПУЛЬС АНИМАЦИЯ */
-@keyframes pulse {
-    0% { transform: scale(1); box-shadow: 0 0 25px #00eaff, 0 0 60px #00eaff; }
-    50% { transform: scale(1.07); box-shadow: 0 0 45px #00eaff, 0 0 120px #00eaff; }
-    100% { transform: scale(1); box-shadow: 0 0 25px #00eaff, 0 0 60px #00eaff; }
-}
+    .tg-btn:hover {
+        background: rgba(0,255,120,0.15);
+        box-shadow: 0 0 18px rgba(0,255,120,0.35);
+    }
 
 </style>
 </head>
 
 <body>
+<div class="container">
+    <h1>EXTAZZ CYBER PANEL</h1>
 
-<!-- ===== ЭКРАН ЗАГРУЗКИ ===== -->
-<div id="loader">LOADING... █▒▒▒▒▒▒▒</div>
+    <div class="grid">
 
-<!-- МЕНЮ -->
-<div class="menu">
-    <a href="#main">Услуги</a>
-    <a href="#prices">Прайсы</a>
-    <a href="#contact">Контакты</a>
+        <div class="card">
+            <h2>Название услуги</h2>
+            <p>Краткое описание услуги или прайс. Можешь вписать сам.</p>
+        </div>
+
+        <div class="card">
+            <h2>Название услуги</h2>
+            <p>Описание. Всё редактируется легко.</p>
+        </div>
+
+        <div class="card">
+            <h2>Название услуги</h2>
+            <p>Описание услуги. Цена, детали и т.д.</p>
+        </div>
+
+        <div class="card">
+            <h2>Название услуги</h2>
+            <p>Вписывай всё что хочешь — текст сам изменишь.</p>
+        </div>
+
+        <div class="card">
+            <h2>Название услуги</h2>
+            <p>Можно добавлять сколько угодно карточек.</p>
+        </div>
+
+    </div>
+
+    <a href="https://t.me/extazz007" class="tg-btn">Связаться в Telegram</a>
+
 </div>
-
-<h1 id="main">EXTAZZ CYBER PORTFOLIO</h1>
-
-<!-- ===== БЛОК 1 ===== -->
-<h2>ОСНОВНЫЕ УСЛУГИ</h2>
-<div class="cards">
-    <div class="card">Услуга 1 – цена</div>
-    <div class="card">Услуга 2 – цена</div>
-    <div class="card">Услуга 3 – цена</div>
-    <div class="card">Услуга 4 – цена</div>
-</div>
-
-<!-- ===== БЛОК 2 ===== -->
-<h2>ДОПОЛНИТЕЛЬНЫЕ</h2>
-<div class="cards">
-    <div class="card">Услуга 5 – цена</div>
-    <div class="card">Услуга 6 – цена</div>
-    <div class="card">Услуга 7 – цена</div>
-    <div class="card">Услуга 8 – цена</div>
-</div>
-
-<!-- ===== БЛОК 3 ===== -->
-<h2>СЛОЖНЫЕ РАБОТЫ</h2>
-<div class="cards">
-    <div class="card">Услуга 9 – цена</div>
-    <div class="card">Услуга 10 – цена</div>
-</div>
-
-<!-- ===== КЛИКАБЕЛЬНАЯ КНОПКА ===== -->
-<div id="contact">
-    <a href="https://t.me/extazz007" target="_blank" class="contact-btn">
-        СВЯЗАТЬСЯ
-    </a>
-</div>
-
 </body>
 </html>
