--- a/index.html
+++ b/index.html
@@ -98,33 +98,33 @@
 
 <body>
 <div class="container">
-    <h1>EXTAZZ CYBER PANEL</h1>
+    <h1>EXTAZZ PICE</h1>
 
     <div class="grid">
 
         <div class="card">
-            <h2>Название услуги</h2>
-            <p>Краткое описание услуги или прайс. Можешь вписать сам.</p>
+            <h2>СНОС ПОЛЬЗОВАТЕЛЯ</h2>
+            <p>АККАУНТ ПОЛЬЗОВАТЕЛЯ СНОСИТСЯ ИЗ ТГ (УДАЛЕНИЕ) - 1500₽.</p>
         </div>
 
         <div class="card">
-            <h2>Название услуги</h2>
-            <p>Описание. Всё редактируется легко.</p>
+            <h2>ПРОБИВ ИНФОРМАЦИИ</h2>
+            <p>ПРОБИВ ИНФОРМАЦИИИ ПОЛЬЗОВАТЕЛЯ ПО ТЕГ/НОМЕР/ID - 2500₽.</p>
         </div>
 
         <div class="card">
-            <h2>Название услуги</h2>
-            <p>Описание услуги. Цена, детали и т.д.</p>
+            <h2>СВАТ/ДОКСф</h2>
+            <p>ПОЛНАЯ ИНФОРМАЦИЯ НА ЧЕЛОВЕКА + заказ СВАТ/ДЕАНОН ДОПОЛНИТЕЛЬНО - 5000₽.</p>
         </div>
 
         <div class="card">
-            <h2>Название услуги</h2>
-            <p>Вписывай всё что хочешь — текст сам изменишь.</p>
+            <h2>ДЕАНОН</h2>
+            <p>ПОЛНАЯ ИНФ. НА ЧЕЛОВЕКА + ЗАКАЗ ДЕАНОНА - 10.000₽.</p>
         </div>
 
         <div class="card">
-            <h2>Название услуги</h2>
-            <p>Можно добавлять сколько угодно карточек.</p>
+            <h2>VIP ПРОЖАР</h2>
+            <p>ВСЕ ВМЕСТЕ (СО СКИДКОЙ) - 15.000₽.</p>
         </div>
 
     </div>
