--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>EXTAZZ CYBER PANEL</title>
+<title>EXTAZZ CYBER PRICE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
